Fri Jul 19 16:59:00 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* acgeneral.m4 (AC_CHECK_TYPE): Add dnl so regexp doesn't have a
	leading newline.

Wed Jun 12 13:56:57 1996  David J MacKenzie  <djm@catapult.va.pubnix.com>

	* acgeneral.m4 (AC_CHECK_TYPE): Remove extra ')'.

	* Many files: Update the FSF street address.

Sun Jun  9 17:54:23 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* acgeneral.m4 (AC_CHECK_LIB): Add missing \ in last change.

Fri Jun  7 11:54:58 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* acgeneral.m4 (AC_CHECK_LIB): Identifierize lib name in $ac_tr_lib.

Mon May 27 13:49:02 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* acspecific.m4 (AC_SYS_LONG_FILE_NAMES): If $TMPDIR names an
	existing, writable directory, then test it instead of /tmp, /var/tmp,
	and /usr/tmp for long file name support.

	* acgeneral.m4 (AC_PREREQ): Prepend "FATAL ERROR: " to msg.

Sun May 26 19:07:15 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* acspecific.m4 (AC_PROG_MAKE_SET): Sanitize $MAKE for use as
	identifier.

	* acgeneral.m4 (AC_CHECK_TYPE): Tighten regexp so ulong doesn't match
	ulong_t.

	* autoheader.sh: Put $syms in a temporary file and use fgrep -f.

Tue May  7 13:20:33 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* acgeneral.m4: Verion 2.10 released.

Tue Mar 26 13:03:12 1996  Roland McGrath  <roland@charlie-brown.gnu.ai.mit.edu>

	* acgeneral.m4 (AC_OUTPUT_HEADER): Make subdir if necessary.

Thu Mar 21 10:52:03 1996  Roland McGrath  <roland@charlie-brown.gnu.ai.mit.edu>

	* acspecific.m4 (AC_FUNC_GETLOADAVG): Fix name of -lelf cache variable
	name in test of it.
	(AC_PATH_XTRA): Fix name of -ldnet cache variable name in test of it.

Wed Mar 20 09:37:31 1996  Roland McGrath  <roland@charlie-brown.gnu.ai.mit.edu>

	* acgeneral.m4 (AC_CHECK_LIB): Use \055 for -; leading and trailing
	both lose with some tr.

	* acspecific.m4 (AC_C_CONST): Remove check for gcc 2.7 bug.